test/src/e2e_vm_tests/test_programs/should_fail/reference_is_not_reference_to_mutable_value/src/main.sw
script;

fn main() {
    let mut array = [1u64, 2, 3];

    let r_array_1 = &array;

    *r_array_1 = [2, 3, 4];


    let r_array_2 = r_array_1;

    *r_array_2 = [2, 3, 4];


    let r_array_3 = &get_array(
        1, 2
    );

    *r_array_3 = [2, 3, 4];

    *&array = [2, 3, 4];
}

fn get_array(_x: u64, _y: u64) -> [u64;3] {
    [0, 0, 0]
}